<resources>
    <string name="app_name">AppointMed</string>
    <string name="expediente">Expediente</string>
    <string name="citas">Citas</string>
    <string name="historial">Historial</string>
    <string name="ayuda">Ayuda</string>
    <string name="option">Opciones</string>
    <string name="expNombre">Nombre:</string>
    <string name="expDir">Direccion:</string>
    <string name="expTel">Telefono:</string>
    <string name="expCelular">Celular:</string>
    <string name="expTipoSangre">Tipo de sangre:</string>
    <string name="expAlergias">Alergias:</string>
    <string name="expContacto">Contacto de emergencia:</string>
    <string name="fechaHistorial">Fecha</string>
    <string name="tipoRegistroHistorial">Tipo de registro</string>
    <string name="descripHistorial">Descripcion</string>
    <string name="medicoHistorial">Medico a cargo</string>
    <string name="hospitalCita">Centro medico</string>
    <string name="select">Seleccionar</string>
    <string name="login">Iniciar sesión</string>
    <string name="signup">Registrarse</string>
    

</resources>
