<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:fitsSystemWindows="true">


    <include
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <TableLayout
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp">
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/btnExpediente"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/expediente"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:textColor="@color/colorText"
                android:layout_marginEnd="5dp"
                />
            <Button
                android:id="@+id/btnCita"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/citas"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:textColor="@color/colorText"
                android:layout_marginStart="5dp"
                />
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp">
            <Button
                android:id="@+id/btnHistorial"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/historial"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:textColor="@color/colorText"
                android:layout_marginEnd="5dp"
                />
            <Button
                android:id="@+id/btnAyuda"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/ayuda"
                android:textAllCaps="false"
                android:layout_marginStart="5sp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:textColor="@color/colorText"
                android:layout_marginEnd="5dp"
                />
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </TableLayout>

</android.support.constraint.ConstraintLayout>