<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HistorialMed">

    <include
        android:id="@+id/toolbarAlt"
        layout="@layout/custom_toolbar_alt"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <TableLayout
        android:id="@+id/tabla"
        android:layout_width="395dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAlt">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.175"
                android:text="@string/fechaHistorial"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="94dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.225"
                android:text="@string/tipoRegistroHistorial"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/descripHistorial"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/medicoHistorial"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/dateHistorial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.175"
                android:text="@string/fechaHistorial"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="94dp" />

            <TextView
                android:id="@+id/typeRegHistorial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.225"
                android:text="@string/tipoRegistroHistorial"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/descripHistorial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/descripHistorial"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/doctorHistorial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/medicoHistorial"
                android:textSize="18sp" />

        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>